--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Hi student, Welcome to XYZ University! V1</h1>
-    <h1>opsbee is comming soon V1</h1>
+    <h1>Hi student, Welcome to XYZ University!</h1>
+    <h1>opsbee is comming soon</h1>
     <p>You can sign up to the platform to access all important notes & lectures.</p>
 
     <form action="/addUser" method="POST" target="_blank" id="signupForm">
